Fixed layout of background to be fixed and lined up better with page body. Fixed button1 button2 to be in line with edges for Shop. Removed button1 and button2 from styles.css in pages to clean clutter. Utilized background-attachment fixed. Used position relative to line up buttons. Added overflow hidden to fix an issue created from button making excess scroll.

--- a/html-boilerplate/styles.css
+++ b/html-boilerplate/styles.css
@@ -17,23 +17,41 @@
     height: 3cm;
     width: 5cm;
     border-color: goldenrod;
+    border-width: 5px;
 }
 .button1:hover {
     display: inline-block;
     background-color: goldenrod;
     height: 3cm;
     width: 5cm;
+    border-width: 5px;
+
 }
 .button2 {
     transition-duration: 0.4s;
-    display: block;
-    height: 2cm;
-    width: 4cm;
+    display: inline-block;
+    height: 3cm;
+    width: 5cm;
     border-color: orange;
+    border-width: 5px;
 }
 .button2:hover {
     display: inline-block;
     background-color: orange;
-    height: 2cm;
-    width: 4cm;
+    height: 3cm;
+    width: 5cm;
+    border-width: 5px;
+
+}
+.leftproduct1 {
+    position: relative;
+    left: 10px; bottom: 5cm;
+}
+.rightproduct2 {
+    position: relative;
+    left: 1100px; bottom: 8.5cm;
+}
+.middlesummary {
+    position: relative;
+    left:510px; top:130px;
 }
